# python-template

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.html  README.md  api.html  genindex.html  index.html  logging_cfg.yml  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  refactor.md
.github/actions/setup_env/: action.yml
.github/workflows/: deploy_doc.yml  docs.yml  re_wiki.yml  test.yml  wiki.yml
_autosummary/: src.html
_autosummary/src/: src.utils.html
_autosummary/src/utils/: src.utils.common.html  src.utils.common.set_log.html  src.utils.io.dump_json.html  src.utils.io.dump_pickle.html  src.utils.io.dump_yaml.html  src.utils.io.html  src.utils.io.load_json.html  src.utils.io.load_pickle.html  src.utils.io.load_yaml.html
_modules/: index.html
_modules/src/utils/: common.html  io.html
_sources/: README.md.txt  api.md.txt
_sources/_autosummary/: src.rst.txt
_sources/_autosummary/src/: src.utils.rst.txt
_sources/_autosummary/src/utils/: src.utils.common.rst.txt  src.utils.common.set_log.rst.txt  src.utils.io.dump_json.rst.txt  src.utils.io.dump_pickle.rst.txt  src.utils.io.dump_yaml.rst.txt  src.utils.io.load_json.rst.txt  src.utils.io.load_pickle.rst.txt  src.utils.io.load_yaml.rst.txt  src.utils.io.rst.txt
docs/: Makefile  README.md  api.rst  conf.py  index.md  index.rst
docs/_templates/: custom-module-template.rst
src/: __init__.py
src/utils/: __init__.py  common.py  io.py
tests/: test_sample.py
