
[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["haritaku"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
networkx = "^2.5.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "0.5.2"
sphinxcontrib-katex = "^0.8.6"
PyYAML = "^5.4.1"
jupyter-sphinx = "^0.3.2"
nbsphinx = "^0.8.7"
myst-parser = "0.15.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
flake8 = "^3.9.2"
pytest = "^6.2.4"
sphinx-autobuild = "^2021.3.14"
black = "^21.6b0"
isort = "^5.9.3"
jupyterlab-code-formatter = "^1.4.10"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest-cov = "^3.0.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
pyupgrade = "^2.31.0"
Pygments = "^2.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
select = "B, B9, C, D, DAR, E, F, W"
# B, B9: bugbear
# C: mccabe
# D: flake8-docstrings
# DAR: darglint
# F: pyflakes
# W and E: pycodestyle warnings and error
max-line-length = 120
max-complexity = 20
docstring-convention = "google"
strictness = "long"
per-file-ignores = "tests/*:D, DAR"
ignore = "E203, E501, E722, D415, W503"
# E203: Whitespace before ':'
# E501: Line too long (82 > 79 characters)
# E722: Do not use bare except'
# D415: First line should end with a period, question mark, or exclamation point
# W503: Line break occurred before a binary operator

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
addopts = "-v -s --ff --doctest-modules --showlocals --cov --cov-report=term-missing"
norecursedirs = [".*", "src", "*.egg", "dist", "build"]
